# fatcopy

./: Cargo.toml  README.md
src/: bufreader.rs  lib.rs  main.rs  protocol.rs
