[package]
name = "fatcopy"
version = "0.1.0"
edition = "2021"

[lib]
name = "fatcopy"
path = "src/lib.rs"

[[bin]]
name = "fatcopy"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
nom-bufreader = { version = "0.2.0", default-features = false }
sha2 = "0.10"
