[package]
name = "fatcopy"
version = "0.1.0"
edition = "2021"

[lib]
name = "fatcopy"
path = "src/lib.rs"

[[bin]]
name = "fatcopy"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
clap = { version = "4.2.1", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
nix = { version = "0.26.2", default-features = false, features = ["socket", "process"] }
nom = "7.1.3"
sha2 = "0.10"
ssh-control = { git = "https://github.com/mephesto1337/ssh-control", version = "0.1.0" }
