[package]
name = "fatcopy"
version = "0.1.0"
edition = "2021"

[lib]
name = "fatcopy"
path = "src/lib.rs"

[[bin]]
name = "fatcopy"
path = "src/bin/fatcopy.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive", "env"] }
env_logger = "0.10.0"
log = "0.4.17"
nix = { version = "0.26.2", default-features = false, features = ["socket", "process"] }
nom = "7.1.3"
sha2 = "0.10"
